--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,5 +1,5 @@
 school.name.empty = The "School name" field can't be empty.
 school.name.alreadyExist = The School already exist in system.
-school.postalIndex.empty = The "postal index" field can't be empty.
-school.postalIndex.alreadyExist = The "postal index" field is not unique.
+school.postalCode.empty = The "postal code" field can't be empty.
+school.postalCode.alreadyExist = The "postal code" field is not unique.
 
