--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -3,3 +3,6 @@ school.name.alreadyExist = The School already exist in system.
 school.postalCode.empty = The "postal code" field can't be empty.
 school.postalCode.alreadyExist = The "postal code" field is not unique.
 
+schoolClass.name.empty = The "School Class name" field can't be empty.
+
+subject.name.empty = The "Subject name" field can't be empty.
